--- a/frontend/src/app/_shared/components/date-selector/date-selector.component.html
+++ b/frontend/src/app/_shared/components/date-selector/date-selector.component.html
@@ -1,16 +1,16 @@
-<div class="d-flex flex-row align-items-center">
+<div class="date-selector">
   <div class="input-group pt-2 pb-2 w-75">
     <input class="form-control form-control-sm" placeholder="yyyy-mm-dd" name="dp" 
           [(ngModel)]="dateTemp" (ngModelChange)="modelChange()" [minDate]="minDate" [maxDate]="maxDate" 
           (navigate)="monthChanged($event.next)" ngbDatepicker #d="ngbDatepicker">
-    <div class="input-group-addon" (click)="d.toggle()">
+    <button class="input-group-addon input-group-action" type="button" aria-label="Åpne kalender" (click)="d.toggle()">
       <i class="fa fa-calendar" aria-hidden="true"></i>
-    </div>
-    <div class="input-group-addon" (click)="onDateDelete()">
+    </button>
+    <button class="input-group-addon input-group-action" type="button" aria-label="Nullstill dato" (click)="onDateDelete()">
       <i class="fa fa-remove text-danger" aria-hidden="true"></i>
-    </div>
+    </button>
   </div>
-  <div class="p-2">
+  <div class="time-wrap">
     <ngb-timepicker [(ngModel)]="timeTemp" [meridian]="meridian" [spinners]="true" [size]="timeSize" (ngModelChange)="modelChange()"></ngb-timepicker>
   </div>
 </div>
